# Pwnagotchi-Bootable

./: .gitignore  CMakeLists.txt  LICENSE  README.md  advanced_attacks.hpp  advanced_neural_net.hpp  advanced_pwnagotchi.hpp  ai_communication.hpp  anon.cpp  anon.py  anon_core.hpp  attack_optimizer.hpp  boot_config.sh  display_system.hpp  handshake_processor.hpp  mesh_network.hpp  network_intelligence.hpp  neural_network.cpp  neural_network.hpp  personality_module.hpp  pwnagotchi.cpp  pwnagotchi.hpp  requirements.txt  stealth_system.hpp  system_config.hpp  toolchain-rpi.cmake
build_scripts/: build.sh  build_and_flash.sh  cmdline.txt  config.txt  install.sh  optimize.sh  prepare_sd.sh  setup_pwnagotchi.sh  setup_wifi.sh
